--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -8,4 +8,29 @@
     margin: 3.5% auto;
     border-radius: 13px;
     border: 7px solid #3DC8A3;
+    text-align: left !important;
 }
+.caret {
+    margin-left: 1%;
+    font-weight: 400;
+    font-size: 50px;
+    color: #FFFFFF;
+    -webkit-animation: 2s blink step-end infinite;
+    animation: 2s blink step-end infinite;
+} 
+  @keyframes blink {
+    from, to {
+      opacity: 0;
+    }
+      60% {
+          opacity: 1;
+        }
+  }
+  @-webkit-keyframes blink {
+    from, to {
+        opacity: 0;
+      }
+      60% {
+          opacity: 1;
+        }
+  }
