Added autosizing input field + small style changes to it

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -34,3 +34,9 @@
           opacity: 1;
         }
   }
+input {
+  background: transparent !important;
+    border: none;
+    outline: none;
+    caret-color: transparent;
+}
