Input style changes

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -39,4 +39,7 @@ input {
     border: none;
     outline: none;
     caret-color: transparent;
+    color: white;
+    font-size: 1.7rem;
+    max-width: inherit;
 }
