--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 *{
-  font-family: "Roboto";
+  font-family: "Roboto" !important;
   overflow: hidden;
 }
 .user-content {
