--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,7 +5,7 @@
 }
 .game-heading {
     width: 100vw;
-    height: 30vh;
+    height: 40vh;
 }
 .game-heading-txt {
     color: white;
@@ -14,4 +14,7 @@
     2px 8px 6px rgba(0,0,0,0.2),
     0px -5px 35px rgba(255,255,255,0.3);
     margin-bottom: 0 !important;
+}
+p{
+    margin-top: 10%;
 }
