--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,14 +1,22 @@
 .search-main-content {
     vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 .search-bar {
     background-color: #00B7AB;
     width: 40%;
     height: 8%;
-    margin: 3.5% auto;
+    margin: 1.5% auto;
     border-radius: 13px;
     border: 7px solid #3DC8A3;
     text-align: left !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 400px;
 }
 .caret {
     margin-left: 1%;
@@ -34,12 +42,18 @@
           opacity: 1;
         }
   }
-input {
+.search-input {
   background: transparent !important;
     border: none;
     outline: none;
-    caret-color: transparent;
     color: white;
-    font-size: 1.7rem;
+    font-size: 3.7rem;
     max-width: inherit;
+    vertical-align: middle;
+    margin: auto 0;
+    width: 100%;
+}
+.autocomplete {
+  width: 100%;
+  color: white;
 }
